# chex-xai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_FA.md  pyproject.toml  requirements.txt
configs/: paths.yaml  train.yaml  train.yaml 
data/splits/: dev.csv  test.csv
docs/literature/: key_references.md
docs/notes/: project_decisions.md
docs/proposal/v1/: Proposal_XAI_CXR_Trustworthiness_AliAbbasi_v1.docx
docs/supervisor_feedback/: 2026-06-supervisor-feedback-original.md  2026-06-supervisor-feedback-v1.md
scripts/: check_dataloader.py  compute_pos_weight.py  compute_thresholds.py  dump_class_support.py  eval.py  make_splits.py  train.py
src/chex_xai/data/: chexpert.py  transforms.py
src/chex_xai/engine/: train.py
src/chex_xai/metrics/: metrics.py
src/chex_xai/models/: backbones.py  classifier.py
src/chex_xai/utils/: checkpoint.py  earlystop.py  ops.py  seed.py
