[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chex-xai"
version = "0.1.0"
description = "CheXpert XAI pipeline"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "pandas",
  "scikit-learn",
  "pillow",
  "omegaconf",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

